--- a/package.json
+++ b/package.json
@@ -4,34 +4,38 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "lint": "eslint . --ext .ts,.tsx",
     "start": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
     "test": "vite test"
   },
   "dependencies": {
-    "@types/node": "^20.12.3",
     "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.23",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "react-fontawesome": "^1.7.1",
     "reactjs-popup": "^2.0.6",
-    "typescript": "^5.4.3"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "vite": "^5.2.8",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.24.1",
-    "@fortawesome/fontawesome-free": "^6.5.2",
     "@types/node": "^20.12.4",
     "@types/react-dom": "^18.2.24",
-    "typescript": "^5.4.4",
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.2.7",
-    "vite-plugin-svgr": "^4.2.0"
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "typescript": "^5.4.4"
   }
 }
