--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
     "test": "vite test"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-router": "^1.26.12",
     "@types/react": "^18.2.74",
+    "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@fortawesome/fontawesome-free": "^6.5.2",
     "react-fontawesome": "^1.7.1",
     "reactjs-popup": "^2.0.6",
     "vite": "^5.2.8",
-    "@vitejs/plugin-react": "^4.2.1",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.24.1",
+    "@tanstack/router-devtools": "^1.26.12",
+    "@tanstack/router-vite-plugin": "^1.26.10",
     "@types/node": "^20.12.4",
     "@types/react-dom": "^18.2.24",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
